--- a/src/components/elements/MovieInfo/MovieInfo.css
+++ b/src/components/elements/MovieInfo/MovieInfo.css
@@ -10,10 +10,10 @@
 
 @keyframes animateMovieinfo {
   from {
-      opacity:0;
+    opacity: 0;
   }
   to {
-      opacity:1;
+    opacity: 1;
   }
 }
 
@@ -48,7 +48,7 @@
 
 .rmdb-movieinfo-text h1 {
   font-family: 'Abel', sans-serif;
-  font-size:48px;
+  font-size: 48px;
   margin: 0;
 }
 
@@ -56,6 +56,7 @@
   font-size: 16px;
   line-height: 0;
   margin-top: 30px;
+  text-transform: uppercase;
 }
 
 .rmdb-movieinfo-text p {
@@ -90,8 +91,8 @@
 }
 
 meter::-webkit-meter-bar {
-  background: #FFF;
-  width:200px;
+  background: #fff;
+  width: 200px;
 }
 meter::-webkit-meter-optimum-value {
   background: linear-gradient(to bottom, #16d47b);
