--- a/src/components/elements/FourColGrid/FourColGrid.css
+++ b/src/components/elements/FourColGrid/FourColGrid.css
@@ -1,6 +1,5 @@
 .rmdb-grid h1 {
-  font-family: 'Abel', sans-serif;
-  font-size:42px;
+  font-size: 42px;
 }
 
 .rmdb-grid-content {
@@ -11,18 +10,19 @@
 }
 
 .rmdb-grid-element {
-  background: #353535;
   max-height: 430px;
   animation: animateGrid 0.5s;
+  background-color: #1c1c1c;
   overflow: hidden;
 }
 
 @keyframes animateGrid {
   from {
-      opacity:0;
+    opacity: 0;
   }
+
   to {
-      opacity:1;
+    opacity: 1;
   }
 }
 
@@ -31,11 +31,11 @@
     grid-template-columns: auto auto;
   }
 
-  .rmdb-grid-element:nth-child(2n+2) {
+  .rmdb-grid-element:nth-child(2n + 2) {
     margin-right: 0;
   }
 
   .rmdb-grid h1 {
-    font-size:22px;
+    font-size: 22px;
   }
 }
