--- a/src/components/pages/page.css
+++ b/src/components/pages/page.css
@@ -1,8 +1,8 @@
-.rmdb-home {
+.rmdb-page {
   margin-bottom: 100px;
 }
 
-.rmdb-home-grid {
+.rmdb-page-grid {
   max-width: 1280px;
   margin: 0 auto;
   padding: 0 20px;
