Sort movies by relase date, move thumb title to top, add year to title

--- a/src/components/elements/FourColGrid/FourColGrid.css
+++ b/src/components/elements/FourColGrid/FourColGrid.css
@@ -10,7 +10,7 @@
 }
 
 .rmdb-grid-element {
-  max-height: 430px;
+  /* max-height: 430px; */
   animation: animateGrid 0.5s;
   background-color: #1c1c1c;
   overflow: hidden;
