Change font-family to 'Roboto Condensed' and make it common (remove duplicates). Remove importants, fix bg-image in HeroImage

--- a/src/components/elements/SearchBar/SearchBar.css
+++ b/src/components/elements/SearchBar/SearchBar.css
@@ -27,7 +27,7 @@
 }
 
 .rmdb-searchbar-input {
-  font-family: 'Abel', sans-serif;
+  font-family: inherit;
   font-size: 38px;
   position: absolute;
   left: 70px;
