--- a/src/components/elements/ActorInfo/MovieInfo.css
+++ b/src/components/elements/ActorInfo/MovieInfo.css
@@ -1,7 +1,7 @@
 .rmdb-movieinfo {
   background-color: #000;
-  background-size: cover !important;
-  background-position: center !important;
+  background-size: cover;
+  background-position: center;
   width: 100%;
   height: 600px;
   padding: 40px 20px;
@@ -37,7 +37,6 @@
 }
 
 .rmdb-movieinfo-text {
-  font-family: Arial, Helvetica, sans-serif;
   height: 100%;
   width: auto;
   padding: 40px;
@@ -49,7 +48,6 @@
 }
 
 .rmdb-movieinfo-text h1 {
-  font-family: 'Abel', sans-serif;
   font-size: 48px;
   margin: 0;
 }
@@ -62,7 +60,6 @@
 }
 
 .rmdb-movieinfo-text p {
-  font-family: 'Abel', sans-serif;
   font-size: 18px;
   line-height: 26px;
 }
