--- a/src/components/elements/HeroImage/HeroImage.css
+++ b/src/components/elements/HeroImage/HeroImage.css
@@ -1,6 +1,7 @@
 .rmdb-heroimage {
-  background-size: 100%, cover !important;
-  background-position: center, center !important;
+  background-color: #1c1c1c;
+  background-size: 100%, cover;
+  background-position: center, center;
   width: 100%;
   height: 600px;
   position: relative;
@@ -9,10 +10,11 @@
 
 @keyframes animateHeroimage {
   from {
-      opacity:0;
+    opacity: 0;
   }
+
   to {
-      opacity:1;
+    opacity: 1;
   }
 }
 
@@ -29,18 +31,16 @@
   bottom: 40px;
   margin-right: 20px;
   min-height: 100px;
-  background: rgba(0, 0, 0, 0.0);
+  background: rgba(0, 0, 0, 0);
   color: #fff;
 }
 
 .rmdb-heroimage-text h1 {
-  font-family: 'Abel', sans-serif;
-  font-size:48px;
+  font-size: 48px;
   color: #fff;
 }
 
 .rmdb-heroimage-text p {
-  font-family: 'Abel', sans-serif;
   font-size: 22px;
   line-height: 26px;
   color: #fff;
