--- a/src/components/elements/Header/Header.css
+++ b/src/components/elements/Header/Header.css
@@ -1,47 +1,29 @@
 .rmdb-header {
-  width: 100%;
-  height: auto;
-  background: #1c1c1c;
-  padding: 0 20px;
-  box-sizing: border-box;
+  background-color: #1c1c1c;
 }
 
 .rmdb-header-content {
-  max-width: 1280px;
-  min-height: 120px;
-  height: auto;
-  padding: 20px 0px;
-  margin: 0 auto;
-  box-sizing: border-box;
-  overflow: hidden;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .rmdb-logo {
   width: 300px;
-  margin-top: 20px;
-  float: left;
 }
 
 .rmdb-tmdb-logo {
-  width: 122px;
-  margin-top: 25px;
-  float: right;
+  width: 120px;
 }
 
 @media screen and (max-width: 500px) {
-  .rmdb-header-content {
-    max-width: 1280px;
-    min-height: 0px;
+  .rmdb-logo {
+    width: 150px;
   }
 
   .rmdb-tmdb-logo {
-    display: inline-block;
-    width:80px;
-    margin-top: 0px;
-  }
-
-  .rmdb-logo {
-    width: 150px;
-    margin-top: 5px;
+    width: 80px;
   }
 }
