--- a/src/components/elements/LoadMoreBtn/LoadMoreBtn.css
+++ b/src/components/elements/LoadMoreBtn/LoadMoreBtn.css
@@ -1,18 +1,26 @@
 .rmdb-loadmorebtn {
-  background: #16d47b;
-  width: 100%;
-  min-height: 50px;
-  text-align: center;
-  color: #fff;
-  cursor: pointer;
-  transition: all 0.3s;
-}
-
-.rmdb-loadmorebtn p {
-  font-size: 42px;
   padding: 20px;
+  margin-top: 40px;
+  width: 100%;
+  text-align: center;
+  font-family: inherit;
+  font-size: 2.5rem;
+  line-height: 1;
+  color: #fff;
+  background-color: #16d47b;
+  border: 0;
+  cursor: pointer;
 }
 
 .rmdb-loadmorebtn:hover {
-  opacity: 0.8;
+  background-image: linear-gradient(#0002, #0001);
+}
+
+.rmdb-loadmorebtn:active {
+  color: #fafafa;
+  background-image: linear-gradient(#0003, #0004);
+}
+
+.rmdb-loadmorebtn:focus:active {
+  outline: none;
 }
