--- a/src/components/elements/SearchBar/SearchBar.css
+++ b/src/components/elements/SearchBar/SearchBar.css
@@ -1,41 +1,31 @@
 .rmdb-searchbar {
-  width: 100%;
-  height: 105px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  color: #fff;
   background: #1c1c1c;
-  position: relative;
-  padding: 25px 20px 0px 20px;
-  box-sizing: border-box;
-  color: #fff;
 }
 
-.rmdb-searchbar-content {
-  max-width: 1280px;
-  width: 100%;
-  height: 55px;
-  background: #353535;
-  margin: 0 auto;
+.rmdb-searchbar-label {
+  display: flex;
+  align-items: center;
   border-radius: 40px;
-  position: relative;
-  color: #fff;
+  background-color: #353535;
 }
 
-.rmdb-fa-search {
-  position: absolute;
-  left: 20px;
-  top: 12px;
-  color: #fff;
+.rmdb-fa-search.fa-search {
+  margin-right: 0;
+  padding: 10px 15px;
 }
 
 .rmdb-searchbar-input {
+  flex-grow: 1;
+  height: 55px;
+  padding-right: 40px;
   font-family: inherit;
-  font-size: 38px;
-  position: absolute;
-  left: 70px;
-  top: 7px;
+  font-size: 2.5rem;
   border: 0;
-  background: transparent;
-  height: 40px;
   color: #fff;
+  background-color: #0000;
 }
 
 .rmdb-searchbar-input:focus {
