--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,39 @@ body {
   font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif;
   margin: 0;
 }
+
+*,
+*>* {
+  box-sizing: border-box;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
+.rmdb-container {
+  max-width: 1280px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+[class^='fa'] {
+  flex-shrink: 0;
+  margin-right: 10px;
+}
+
+.clearfix:after {
+  content: '';
+  display: table;
+  clear: both;
+}
