--- a/src/components/elements/Info/Info.css
+++ b/src/components/elements/Info/Info.css
@@ -1,4 +1,4 @@
-.rmdb-movieinfo {
+.rmdb-info {
   background-color: #000;
   background-size: cover;
   background-position: center;
@@ -18,12 +18,12 @@
   }
 }
 
-.rmdb-movieinfo-content {
+.rmdb-info-content {
   color: #fff;
   background-color: rgb(0, 0, 0, 0.7);
 }
 
-.rmdb-movieinfo-thumb {
+.rmdb-info-thumb {
   float: left;
   margin-top: -20px;
   margin-right: 2.4em;
@@ -32,11 +32,11 @@
 }
 
 @media screen and (max-width: 720px) {
-  .rmdb-movieinfo {
+  .rmdb-info {
     padding: 20px 0;
   }
 
-  .rmdb-movieinfo-thumb {
+  .rmdb-info-thumb {
     width: 200px;
     margin-top: -10px;
     margin-right: 1.6em;
@@ -45,67 +45,67 @@
 }
 
 @media screen and (max-width: 500px) {
-  .rmdb-movieinfo-thumb {
+  .rmdb-info-thumb {
     width: 100%;
     margin-right: 0;
     margin-bottom: 1em;
   }
 }
 
-.rmdb-movieinfo-text {
+.rmdb-info-text {
   padding: 40px;
   padding-left: 0;
   padding-bottom: 0;
 }
 
-.rmdb-movieinfo-sections {
+.rmdb-info-sections {
   padding-bottom: 40px;
   display: flex;
   flex-wrap: wrap;
   clear: both;
 }
 
-.rmdb-movieinfo-section {
+.rmdb-info-section {
   margin-right: 3em;
 }
 
-.rmdb-movieinfo-section p {
+.rmdb-info-section p {
   margin-bottom: 0;
 }
 
-.rmdb-movieinfo-content h1 {
+.rmdb-info-content h1 {
   margin-top: 0;
   line-height: 1;
 }
 
-.rmdb-movieinfo-content h3 {
+.rmdb-info-content h3 {
   text-transform: uppercase;
 }
 
-.rmdb-movieinfo-content p {
+.rmdb-info-content p {
   font-size: 1.2rem;
   line-height: 1.5em;
 }
 
 @media screen and (max-width: 720px) {
-  .rmdb-movieinfo-sections {
+  .rmdb-info-sections {
     padding-bottom: 20px;
   }
 
-  .rmdb-movieinfo-text {
+  .rmdb-info-text {
     padding: 0;
   }
 
-  .rmdb-movieinfo-content h1 {
+  .rmdb-info-content h1 {
     font-size: 2rem;
   }
 
-  .rmdb-movieinfo-content h3 {
+  .rmdb-info-content h3 {
     font-size: 1.2rem;
     text-transform: uppercase;
   }
 
-  .rmdb-movieinfo-content p {
+  .rmdb-info-content p {
     font-size: 1rem;
     line-height: 1.25em;
   }
