--- a/src/components/elements/SearchBar/SearchBar.css
+++ b/src/components/elements/SearchBar/SearchBar.css
@@ -8,21 +8,23 @@
 .rmdb-searchbar-label {
   display: flex;
   align-items: center;
-  border-radius: 40px;
+  font-size: 2.5rem;
+  border-radius: 1em;
   background-color: #353535;
 }
 
 .rmdb-fa-search.fa-search {
   margin-right: 0;
-  padding: 10px 15px;
+  padding: 0.25em 0.5em;
 }
 
 .rmdb-searchbar-input {
-  flex-grow: 1;
-  height: 55px;
-  padding-right: 40px;
+  width: 100%;
+  height: 1.5em;
+  padding: 0 1em 0 2em;
+  margin-left: -2em;
   font-family: inherit;
-  font-size: 2.5rem;
+  font-size: inherit;
   border: 0;
   color: #fff;
   background-color: #0000;
@@ -33,8 +35,19 @@
 }
 
 @media screen and (max-width: 720px) {
+  .rmdb-searchbar-label {
+    font-size: 2rem;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .rmdb-fa-search.fa-search {
+    display: none;
+  }
+
   .rmdb-searchbar-input {
-    font-size: 28px;
-    color: #fff;
+    padding: 0 0.75em;
+    margin-left: 0;
+    font-size: 1.5rem;
   }
 }
