--- a/src/components/elements/FourColGrid/FourColGrid.css
+++ b/src/components/elements/FourColGrid/FourColGrid.css
@@ -1,16 +1,11 @@
-.rmdb-grid h1 {
-  font-size: 42px;
-}
-
 .rmdb-grid-content {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-column-gap: 40px;
-  grid-row-gap: 40px;
+  grid-column-gap: 30px;
+  grid-row-gap: 30px;
 }
 
 .rmdb-grid-element {
-  /* max-height: 430px; */
   animation: animateGrid 0.5s;
   background-color: #1c1c1c;
   overflow: hidden;
@@ -26,16 +21,28 @@
   }
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 1100px) {
+  .rmdb-grid-content {
+    grid-template-columns: auto auto auto;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+  }
+}
+
+@media screen and (max-width: 740px) {
   .rmdb-grid-content {
     grid-template-columns: auto auto;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
   }
 
   .rmdb-grid-element:nth-child(2n + 2) {
     margin-right: 0;
   }
+}
 
-  .rmdb-grid h1 {
-    font-size: 22px;
+@media screen and (max-width: 550px) {
+  .rmdb-grid-content.rmdb-grid-content-actor {
+    grid-template-columns: auto;
   }
 }
