--- a/src/components/elements/Actor/Actor.css
+++ b/src/components/elements/Actor/Actor.css
@@ -1,29 +1,36 @@
 .rmdb-actor {
-  box-sizing: border-box;
-  background-color: #345;
+  display: flex;
+  color: #f3f3f3;
 }
 
-.rmdb-actor img {
+.rmdb-actor a {
+  text-decoration: none;
+  color: #f3f3f3;
+}
+
+.rmdb-actor-image {
+  flex-shrink: 0;
   width: 40%;
+}
+
+.rmdb-actor-image img {
+  display: block;
+  width: 100%;
   height: auto;
-  float: left;
-  box-sizing: border-box;
+}
+
+.rmdb-actor-info {
+  padding-left: 0.5em;
 }
 
 .rmdb-actor-name {
-  font-size: 22px;
-  color: #fff;
-  float: left;
-  margin: 10px 20px;
-  width: 40%;
-  box-sizing: border-box;
+  font-size: 1.2rem;
+  color: #c3c3c3;
+  text-transform: uppercase;
+  margin: 0.5em 0;
 }
 
 .rmdb-actor-character {
-  font-size: 18px;
-  color: #fff;
-  float: left;
-  margin: 0 20px 10px 20px;
-  width: 40%;
-  box-sizing: border-box;
+  font-size: 1.1rem;
+  margin: 0.5em 0;
 }
