--- a/src/components/elements/Info/Info.css
+++ b/src/components/elements/Info/Info.css
@@ -19,7 +19,7 @@
 }
 
 .rmdb-info-content {
-  color: #fff;
+  color: #f3f3f3;
   background-color: rgb(0, 0, 0, 0.7);
 }
 
@@ -79,6 +79,9 @@
 }
 
 .rmdb-info-content h3 {
+  margin: 0.5em 0;
+  color: #b3b3b3;
+  font-weight: normal;
   text-transform: uppercase;
 }
 
