Replace FontAwesome font with SVG icons, some other style fixes

--- a/src/components/elements/InfoBar/InfoBar.css
+++ b/src/components/elements/InfoBar/InfoBar.css
@@ -22,6 +22,10 @@
   font-size: 1.4rem;
 }
 
+.rmdb-infobar-info {
+  margin-left: 0.5em;
+}
+
 @media screen and (max-width: 720px) {
   .rmdb-infobar-item {
     font-size: 1rem;
