--- a/src/components/elements/FourColGrid/FourColGrid.css
+++ b/src/components/elements/FourColGrid/FourColGrid.css
@@ -23,7 +23,7 @@
 
 @media screen and (max-width: 1100px) {
   .rmdb-grid-content {
-    grid-template-columns: auto auto auto;
+    grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 20px;
     grid-row-gap: 20px;
   }
@@ -31,7 +31,7 @@
 
 @media screen and (max-width: 740px) {
   .rmdb-grid-content {
-    grid-template-columns: auto auto;
+    grid-template-columns: repeat(2, 1fr);
     grid-column-gap: 20px;
     grid-row-gap: 20px;
   }
@@ -43,6 +43,6 @@
 
 @media screen and (max-width: 550px) {
   .rmdb-grid-content.rmdb-grid-content-actor {
-    grid-template-columns: auto;
+    grid-template-columns: 1fr;
   }
 }
