--- a/src/components/elements/MovieThumb/MovieThumb.css
+++ b/src/components/elements/MovieThumb/MovieThumb.css
@@ -4,6 +4,7 @@
 
 .rmdb-moviethumb a {
   display: block;
+  height: 100%;
   position: relative;
   text-decoration: none;
 }
@@ -32,10 +33,10 @@
 }
 
 .rmdb-moviethumb img {
-  width: 500px;
-  height: auto;
-  max-width: 100%;
-  max-height: 100%;
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   transition: all 0.3s;
   box-sizing: border-box;
 }
