--- a/src/components/elements/HeroImage/HeroImage.css
+++ b/src/components/elements/HeroImage/HeroImage.css
@@ -38,7 +38,7 @@
   max-width: 700px;
   margin: 40px 0;
   color: #fff;
-  text-shadow: 1px 1px #1c1c1c;
+  text-shadow: 0 1px 2px #1c1c1c;
 }
 
 .rmdb-heroimage-text p {
