--- a/src/components/elements/LoadMoreBtn/LoadMoreBtn.css
+++ b/src/components/elements/LoadMoreBtn/LoadMoreBtn.css
@@ -1,15 +1,20 @@
 .rmdb-loadmorebtn {
-  padding: 20px;
-  margin-top: 40px;
+  padding: 0.5em;
+  margin-top: 1em;
   width: 100%;
   text-align: center;
-  font-family: inherit;
   font-size: 2.5rem;
   line-height: 1;
   color: #fff;
   background-color: hsl(155, 75%, 35%);
   border: 0;
   cursor: pointer;
+}
+
+@media screen and (max-width: 500px) {
+  .rmdb-loadmorebtn {
+    font-size: 1.75rem;
+  }
 }
 
 .rmdb-loadmorebtn:hover {
