--- a/src/components/pages/page.css
+++ b/src/components/pages/page.css
@@ -1,3 +1,9 @@
 .rmdb-page {
-  margin-bottom: 100px;
+  margin-bottom: 5rem;
+}
+
+@media screen and (max-width: 500px) {
+  .rmdb-page {
+    margin-bottom: 3.5rem;
+  }
 }
