--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,18 @@ h3 {
   font-size: 1.5rem;
 }
 
+.visually-hidden {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
+}
+
 .rmdb-container {
   max-width: 1280px;
   margin-left: auto;
