Refactor font sizes, set all fonts in rem, set some dependent sizes in em

--- a/src/components/elements/Breadcrumbs/Breadcrumbs.css
+++ b/src/components/elements/Breadcrumbs/Breadcrumbs.css
@@ -1,7 +1,15 @@
 .rmdb-breadcrumbs {
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  font-size: 1.5rem;
+  line-height: 1.2;
   background-color: #353535;
+}
+
+@media screen and (max-width: 720px) {
+  .rmdb-breadcrumbs {
+    font-size: 1.25rem;
+  }
 }
 
 .rmdb-breadcrumbs-list {
@@ -14,10 +22,8 @@
 
 .rmdb-breadcrumbs-item,
 .rmdb-breadcrumbs-item a {
-  font-size: 22px;
-  line-height: 30px;
   color: #f3f3f3;
-  padding-right: 10px;
+  padding-right: 0.5em;
   text-decoration: none;
 }
 
