--- a/src/components/elements/Header/Header.css
+++ b/src/components/elements/Header/Header.css
@@ -10,6 +10,10 @@
   padding-bottom: 20px;
 }
 
+.rmdb-header-content img {
+  display: block;
+}
+
 .rmdb-logo {
   width: 300px;
 }
@@ -18,9 +22,14 @@
   width: 120px;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 720px) {
   .rmdb-logo {
     width: 150px;
+  }
+
+  .rmdb-header-content {
+    padding-top: 15px;
+    padding-bottom: 15px;
   }
 
   .rmdb-tmdb-logo {
