--- a/src/components/elements/SearchBar/SearchBar.css
+++ b/src/components/elements/SearchBar/SearchBar.css
@@ -1,14 +1,18 @@
 .rmdb-searchbar {
   padding-top: 25px;
   padding-bottom: 25px;
+  font-size: 2.5rem;
   color: #f3f3f3;
   background: #1c1c1c;
+}
+
+.rmdb-searchbar-form {
+  position: relative;
 }
 
 .rmdb-searchbar-label {
   display: flex;
   align-items: center;
-  font-size: 2.5rem;
 }
 
 .rmdb-searchbar-icon {
@@ -19,10 +23,10 @@
 .rmdb-searchbar-input {
   width: 100%;
   height: 1.5em;
-  padding: 0 1em 0 2em;
+  padding: 0 3.5em 0 2em;
   margin-left: -2em;
   border: 0;
-  color: #fff;
+  color: #f3f3f3;
   border-radius: 1em;
   background-color: #353535;
   transition: box-shadow 0.1s ease-out;
@@ -37,21 +41,49 @@
   box-shadow: 0 0 0 3px #c3c3c3;
 }
 
+.rmdb-searchbar-submit {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  padding: 0.2em 0.75em;
+  font-size: 0.75em;
+  border-radius: 2.5rem;
+  color: inherit;
+  background-color: #fff2;
+  border: 0;
+}
+
+.rmdb-searchbar-submit:hover,
+.rmdb-searchbar-submit:focus {
+  outline: none;
+  color: #353535;
+  background-color: #c3c3c3;
+}
+
+.rmdb-searchbar-submit:active {
+  color: #222222;
+  background-color: #666666;
+}
+
 @media screen and (max-width: 720px) {
-  .rmdb-searchbar-label {
+  .rmdb-searchbar {
     font-size: 2rem;
   }
 }
 
 @media screen and (max-width: 500px) {
+  .rmdb-searchbar {
+    font-size: 1.5rem;
+  }
+
   .rmdb-searchbar-icon {
     display: none;
   }
 
   .rmdb-searchbar-input {
-    padding: 0 0.75em;
+    padding-left: 0.75em;
     margin-left: 0;
-    font-size: 1.5rem;
   }
 
   .rmdb-searchbar-input:focus {
