Move keyfames to global index.css

--- a/src/components/elements/Info/Info.css
+++ b/src/components/elements/Info/Info.css
@@ -6,18 +6,9 @@
   min-height: 600px;
   padding: 40px 0;
   box-sizing: border-box;
-  animation: animateMovieinfo 1s;
+  animation: fadeIn 1s;
 }
 
-@keyframes animateMovieinfo {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
 
 .rmdb-info-content {
   color: #f3f3f3;
