--- a/src/components/elements/Grid/Grid.css
+++ b/src/components/elements/Grid/Grid.css
@@ -6,19 +6,9 @@
 }
 
 .rmdb-grid-element {
-  animation: animateGrid 0.5s;
+  animation: fadeIn 0.5s;
   background-color: #1c1c1c;
   overflow: hidden;
-}
-
-@keyframes animateGrid {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
 }
 
 @media screen and (max-width: 1100px) {
