--- a/src/components/elements/Info/Info.css
+++ b/src/components/elements/Info/Info.css
@@ -9,12 +9,6 @@
   animation: fadeIn 1s;
 }
 
-
-.rmdb-info-content {
-  color: #f3f3f3;
-  background-color: rgb(0, 0, 0, 0.7);
-}
-
 .rmdb-info-thumb {
   float: left;
   margin-top: -20px;
@@ -68,6 +62,16 @@
   padding-right: 40px;
 }
 
+.rmdb-info-text a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.rmdb-info-text a:hover,
+.rmdb-info-text a:focus {
+  opacity: 0.7;
+}
+
 .rmdb-info-sections {
   padding-bottom: 40px;
   display: flex;
@@ -83,6 +87,12 @@
   margin-bottom: 0;
 }
 
+.rmdb-info-content {
+  font-size: 1.2rem;
+  color: #f3f3f3;
+  background-color: rgb(0, 0, 0, 0.7);
+}
+
 .rmdb-info-content h1 {
   margin-top: 0;
   line-height: 1;
@@ -96,7 +106,6 @@
 }
 
 .rmdb-info-content p {
-  font-size: 1.2rem;
   line-height: 1.5em;
 }
 
@@ -138,13 +147,13 @@ meter::-webkit-meter-even-less-good-value {
     padding-right: 20px;
   }
 
-  .rmdb-info-content h2 {
-    font-size: 1.2rem;
-  }
-
-  .rmdb-info-content p {
+  .rmdb-info-content {
     font-size: 1rem;
     line-height: 1.25em;
+  }
+
+  .rmdb-info-content h2 {
+    font-size: 1.2rem;
   }
 
   .rmdb-rating-scale {
