--- a/src/components/elements/Info/Info.css
+++ b/src/components/elements/Info/Info.css
@@ -18,6 +18,45 @@
   height: 525px;
 }
 
+.rmdb-info-text {
+  padding-top: 40px;
+  padding-right: 40px;
+}
+
+.rmdb-info-content {
+  font-size: 1.2rem;
+  color: #f3f3f3;
+  background-color: rgb(0, 0, 0, 0.7);
+}
+
+.rmdb-info-content h1 {
+  margin-top: 0;
+  line-height: 1;
+}
+
+.rmdb-info-section h2 {
+  font-size: 1.5rem;
+  color: #b3b3b3;
+  font-weight: normal;
+  text-transform: uppercase;
+}
+
+.rmdb-info-section p {
+  margin-bottom: 0;
+  line-height: 1.5em;
+}
+
+.rmdb-info-footer {
+  padding-bottom: 40px;
+  display: flex;
+  flex-wrap: wrap;
+  clear: both;
+}
+
+.rmdb-info-footer .rmdb-info-section {
+  margin-right: 3em;
+}
+
 @media screen and (max-width: 870px) {
   .rmdb-info {
     min-height: 450px;
@@ -42,103 +81,8 @@
     margin-right: 1.25em;
     margin-bottom: 0.5em;
   }
-}
 
-@media screen and (max-width: 500px) {
-  .rmdb-info {
-    min-height: 340px;
-  }
-
-  .rmdb-info-thumb {
-    width: 100%;
-    height: 400px;
-    margin-right: 0;
-    margin-bottom: 1em;
-  }
-}
-
-.rmdb-info-text {
-  padding-top: 40px;
-  padding-right: 40px;
-}
-
-.rmdb-info-text a {
-  color: inherit;
-  text-decoration: none;
-}
-
-.rmdb-info-text a:hover,
-.rmdb-info-text a:focus {
-  opacity: 0.7;
-}
-
-.rmdb-info-sections {
-  padding-bottom: 40px;
-  display: flex;
-  flex-wrap: wrap;
-  clear: both;
-}
-
-.rmdb-info-section {
-  margin-right: 3em;
-}
-
-.rmdb-info-section p {
-  margin-bottom: 0;
-}
-
-.rmdb-info-content {
-  font-size: 1.2rem;
-  color: #f3f3f3;
-  background-color: rgb(0, 0, 0, 0.7);
-}
-
-.rmdb-info-content h1 {
-  margin-top: 0;
-  line-height: 1;
-}
-
-.rmdb-info-content h2 {
-  font-size: 1.5rem;
-  color: #b3b3b3;
-  font-weight: normal;
-  text-transform: uppercase;
-}
-
-.rmdb-info-content p {
-  line-height: 1.5em;
-}
-
-.rmdb-rating {
-  display: flex;
-  margin-top: 20px;
-}
-
-.rmdb-rating-scale {
-  width: 250px;
-  height: 1.5em;
-}
-
-meter::-webkit-meter-bar {
-  background-color: #fff;
-  width: 230px;
-  height: 1.5em;
-}
-
-meter::-webkit-meter-optimum-value {
-  background: linear-gradient(to bottom, #16d47b);
-}
-
-meter::-webkit-meter-suboptimum-value {
-  background: linear-gradient(to bottom, #fbb450);
-}
-
-meter::-webkit-meter-even-less-good-value {
-  background: linear-gradient(to bottom, #ee5f5b);
-}
-
-@media screen and (max-width: 720px) {
-  .rmdb-info-sections {
+  .rmdb-info-footer {
     padding-bottom: 20px;
   }
 
@@ -155,23 +99,25 @@ meter::-webkit-meter-even-less-good-value {
   .rmdb-info-content h2 {
     font-size: 1.2rem;
   }
-
-  .rmdb-rating-scale {
-    width: 170px;
-    height: 1.25em;
-  }
-
-  meter::-webkit-meter-bar {
-    width: 150px;
-    height: 1.25em;
-  }
 }
 
-.rmdb-rating-score {
-  margin: 0;
-}
+@media screen and (max-width: 500px) {
+  .rmdb-info {
+    min-height: 340px;
+  }
 
-.fa-film {
-  margin-top: auto;
-  margin-left: auto;
+  .rmdb-info-thumb {
+    width: 100%;
+    height: 400px;
+    margin-right: 0;
+    margin-bottom: 1em;
+  }
+
+  .rmdb-info-text {
+    padding-right: 0;
+  }
+
+  .rmdb-info-footer .rmdb-info-section {
+    margin-right: 1.5em;
+  }
 }
