--- a/src/components/elements/Modal/modal.module.css
+++ b/src/components/elements/Modal/modal.module.css
@@ -26,3 +26,9 @@
   justify-content: space-between;
   padding: 0.75em 1em;
 }
+
+.title {
+  margin: 0;
+  font-size: 1em;
+  font-weight: normal;
+}
