--- a/src/components/elements/Thumbs/moviethumb.module.css
+++ b/src/components/elements/Thumbs/moviethumb.module.css
@@ -1,8 +1,4 @@
-.rmdb-moviethumb {
-  height: 100%;
-}
-
-.rmdb-moviethumb-wrapper {
+.wrapper {
   display: block;
   position: relative;
   padding-bottom: 150%;
@@ -10,7 +6,19 @@
   overflow: hidden;
 }
 
-.rmdb-moviethumb-title {
+.image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: all 0.3s;
+  box-sizing: border-box;
+}
+
+.title {
   position: absolute;
   top: 0;
   transform: translate(0, -100%);
@@ -24,27 +32,19 @@
   box-sizing: border-box;
 }
 
+.wrapper:hover .title {
+  transform: translate(0);
+}
+
 @media screen and (max-width: 550px) {
-  .rmdb-moviethumb-title {
+  .title {
     font-size: 1rem;
   }
 }
 
-.rmdb-moviethumb a:hover .rmdb-moviethumb-title {
-  transform: translate(0);
-}
-
-.rmdb-moviethumb-image {
+.character {
   display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transition: all 0.3s;
-  box-sizing: border-box;
-}
-
-.rmdb-moviethumb-wrapper .rmdb-moviethumb-image {
-  position: absolute;
-  top: 0;
-  left: 0;
+  margin-top: 0.4em;
+  font-size: 0.8em;
+  color: #d3d3d3;
 }
