--- a/src/components/elements/Info/info.module.css
+++ b/src/components/elements/Info/info.module.css
@@ -1,4 +1,4 @@
-.rmdb-info {
+.wrapper {
   background-color: #000;
   background-size: cover;
   background-position: center;
@@ -9,7 +9,13 @@
   animation: fadeIn 1s;
 }
 
-.rmdb-info-thumb {
+.content {
+  font-size: 1.2rem;
+  color: #f3f3f3;
+  background-color: rgb(0, 0, 0, 0.7);
+}
+
+.thumb {
   float: left;
   margin-top: -20px;
   margin-right: 2.4em;
@@ -18,42 +24,36 @@
   height: 525px;
 }
 
-.rmdb-info-text {
+.text {
   padding-top: 40px;
   padding-right: 40px;
 }
 
-.rmdb-info-content {
-  font-size: 1.2rem;
-  color: #f3f3f3;
-  background-color: rgb(0, 0, 0, 0.7);
-}
-
-.rmdb-info-content h1 {
+.title {
   margin-top: 0;
   line-height: 1;
 }
 
-.rmdb-info-section h2 {
+.subtitle {
   font-size: 1.5rem;
   color: #b3b3b3;
   font-weight: normal;
   text-transform: uppercase;
 }
 
-.rmdb-info-section p {
+.section p {
   margin-bottom: 0;
   line-height: 1.5em;
 }
 
-.rmdb-info-footer {
+.footer {
   padding-bottom: 40px;
   display: flex;
   flex-wrap: wrap;
   clear: both;
 }
 
-.rmdb-info-footer .rmdb-info-section {
+.footer .section {
   margin-right: 3em;
 }
 
@@ -62,7 +62,7 @@
     min-height: 450px;
   }
 
-  .rmdb-info-thumb {
+  .thumb {
     width: 250px;
     height: 375px;
   }
@@ -74,7 +74,7 @@
     padding: 20px 0;
   }
 
-  .rmdb-info-thumb {
+  .thumb {
     width: 200px;
     height: 300px;
     margin-top: -10px;
@@ -82,21 +82,21 @@
     margin-bottom: 0.5em;
   }
 
-  .rmdb-info-footer {
+  .footer {
     padding-bottom: 20px;
   }
 
-  .rmdb-info-text {
+  .text {
     padding-top: 20px;
     padding-right: 20px;
   }
 
-  .rmdb-info-content {
+  .content {
     font-size: 1rem;
     line-height: 1.25em;
   }
 
-  .rmdb-info-content h2 {
+  .subtitle {
     font-size: 1.2rem;
   }
 }
@@ -106,18 +106,18 @@
     min-height: 340px;
   }
 
-  .rmdb-info-thumb {
+  .thumb {
     width: 100%;
     height: 400px;
     margin-right: 0;
     margin-bottom: 1em;
   }
 
-  .rmdb-info-text {
+  .text {
     padding-right: 0;
   }
 
-  .rmdb-info-footer .rmdb-info-section {
+  .footer .section {
     margin-right: 1.5em;
   }
 }
