--- a/src/components/elements/Grid/grid.module.css
+++ b/src/components/elements/Grid/grid.module.css
@@ -1,3 +1,7 @@
+.wrapper {
+  padding-top: 0.5rem;
+}
+
 .content {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
