--- a/src/components/elements/Page/page.module.css
+++ b/src/components/elements/Page/page.module.css
@@ -1,9 +1,9 @@
-.rmdb-page {
+.wrapper {
   margin-bottom: 5rem;
 }
 
 @media screen and (max-width: 500px) {
-  .rmdb-page {
+  .wrapper {
     margin-bottom: 3.5rem;
   }
 }
