Rename css class wrapper -> block

--- a/src/components/elements/HeroImage/heroimage.module.css
+++ b/src/components/elements/HeroImage/heroimage.module.css
@@ -1,4 +1,4 @@
-.wrapper {
+.block {
   composes: fadeIn from global;
   position: relative;
   background-color: #1c1c1c;
@@ -6,7 +6,7 @@
   background-position: center;
 }
 
-.wrapper::before {
+.block::before {
   content: '';
   position: absolute;
   top: 0;
