--- a/src/components/elements/Breadcrumbs/breadcrumbs.module.css
+++ b/src/components/elements/Breadcrumbs/breadcrumbs.module.css
@@ -1,4 +1,4 @@
-.wrapper {
+.block {
   padding-top: 0.5em;
   padding-bottom: 0.5em;
   font-size: 1.5rem;
@@ -7,7 +7,7 @@
 }
 
 @media screen and (max-width: 720px) {
-  .wrapper {
+  .block {
     font-size: 1.25rem;
   }
 }
