--- a/src/components/elements/SearchBar/searchbar.module.css
+++ b/src/components/elements/SearchBar/searchbar.module.css
@@ -1,4 +1,4 @@
-.wrapper {
+.block {
   padding-top: 25px;
   padding-bottom: 25px;
   font-size: 2.5rem;
@@ -67,13 +67,13 @@
 }
 
 @media screen and (max-width: 720px) {
-  .wrapper {
+  .block {
     font-size: 2rem;
   }
 }
 
 @media screen and (max-width: 500px) {
-  .wrapper {
+  .block {
     font-size: 1.5rem;
   }
 
