--- a/src/components/elements/Thumbs/moviethumb.module.css
+++ b/src/components/elements/Thumbs/moviethumb.module.css
@@ -1,4 +1,4 @@
-.wrapper {
+.block {
   display: block;
   position: relative;
   padding-bottom: 150%;
@@ -15,7 +15,7 @@
   box-sizing: border-box;
 }
 
-.wrapper .image {
+.block .image {
   position: absolute;
   top: 0;
   left: 0;
@@ -35,7 +35,7 @@
   box-sizing: border-box;
 }
 
-.wrapper:hover .title {
+.block:hover .title {
   transform: translate(0);
 }
 
