--- a/src/components/elements/HeroImage/heroimage.module.css
+++ b/src/components/elements/HeroImage/heroimage.module.css
@@ -1,7 +1,7 @@
 .block {
   composes: fadeIn from global;
   position: relative;
-  background-color: #1c1c1c;
+  background-color: var(--bg-color);
   background-size: cover;
   background-position: center;
 }
@@ -13,7 +13,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: linear-gradient(#0000 40%, #000a);
+  background-image: linear-gradient(transparent 40%, var(--overlay-color));
 }
 
 .wrapper {
@@ -29,8 +29,8 @@
 .content {
   max-width: 700px;
   margin: 40px 0;
-  color: #fff;
-  text-shadow: 0 1px 2px #1c1c1c;
+  color: var(--text-color);
+  text-shadow: 0 1px 2px var(--theme-dark);
 }
 
 .content p {
