--- a/src/components/elements/InfoBar/infobar.module.css
+++ b/src/components/elements/InfoBar/infobar.module.css
@@ -1,5 +1,5 @@
 .block {
-  background-color: #1c1c1c;
+  background-color: var(--bg-color);
   position: relative;
   padding: 20px 0;
   box-sizing: border-box;
@@ -12,7 +12,7 @@
   list-style: none;
   padding: 0;
   margin: 0;
-  color: #f3f3f3;
+  color: var(--text-color);
 }
 
 .item {
