--- a/src/components/elements/LinkBtn/linkbtn.module.css
+++ b/src/components/elements/LinkBtn/linkbtn.module.css
@@ -1,7 +1,7 @@
 .btn {
   height: 1em;
   padding: 0;
-  color: #f3f3f3;
+  color: var(--text-color);
   border: 0;
   background-color: transparent;
   cursor: pointer;
