--- a/src/components/elements/LoadMoreBtn/loadmorebtn.module.css
+++ b/src/components/elements/LoadMoreBtn/loadmorebtn.module.css
@@ -9,7 +9,7 @@
   text-align: center;
   font-size: 2.5rem;
   line-height: 1;
-  color: #fff;
+  color: var(--text-color);
   background-color: hsl(155, 75%, 35%);
   border: 0;
   cursor: pointer;
