--- a/src/components/elements/Modal/modal.module.css
+++ b/src/components/elements/Modal/modal.module.css
@@ -8,7 +8,7 @@
   height: 100vh;
   justify-content: center;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: var(--overlay-color);
 }
 
 .open {
@@ -17,8 +17,8 @@
 }
 
 .content {
-  color: #f3f3f3;
-  background-color: #000;
+  color: var(--text-color);
+  background-color: black;
 }
 
 .header {
