--- a/src/components/elements/Spinner/spinner.module.css
+++ b/src/components/elements/Spinner/spinner.module.css
@@ -2,8 +2,8 @@
   margin: 50px auto;
   width: 50px;
   height: 50px;
-  border: solid #f3f3f3;
-  border-top: solid #16d47b;
+  border: solid var(--theme-light);
+  border-top: solid var(--theme-green);
   border-width: 8px;
   border-radius: 50%;
   animation: spin 0.8s linear infinite;
